[tool.poetry]
name = "ems-climate"
version = "0.1.0"
description = ""
authors = ["EMs <egil.monsas@ngi.no>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^2"
requests = "^2"
pytest = "^8.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

pythonpath = "src"
